--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,17 @@
 *.xcscheme
 
 Handy.xcodeproj/xcuserdata/maiquez.xcuserdatad/xcschemes/xcschememanagement.plist
+
+Handy.xcodeproj/project.pbxproj
+
+*.pbxproj
+
+Handy.xcodeproj/project.pbxproj
+
+*.pbxproj
+
+Handy.xcodeproj/project.pbxproj
+
+*.xcbkptlist
+
+*.pbxproj
